--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -51,7 +51,7 @@
         <!-- display for Bart advisories -->
         <div class="alert alertColor alert-dismissible fade show mt-5 text-center textColor alertSizing " role="alert">
           <strong>Hey!</strong> This is for the BART advisories to be displayed.
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">x</button>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
       </div>
     </div>
