--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid noPad">
   <app-header></app-header>
   <div class="container-fluid" id="background">
-    <div class="row cardMargin">
-      <div class="col-4 d-flex justify-content-center">
+    <div class="row cardMargin d-flex justify-content-center">
+      <div class="col-4">
         <!-- Click event will go on whole card for routing-->
         <div class="card zoom removeBorder " routerLink="/trip-planner">
           <div class="card-body cardOneTop">
@@ -28,7 +28,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 d-flex justify-content-cente">
+      <div class="col-4 d-flex justify-content-center">
         <!-- Click event will go on whole card for routing-->
         <div class="card zoom removeBorder" routerLink="/departures">
           <div class="card-body cardThreeTop">
