API connected properly

--- a/src/app/pages/departures/departures.component.html
+++ b/src/app/pages/departures/departures.component.html
@@ -18,11 +18,11 @@
             </div>
 
             <table class="table pt-5">
-                <tbody *ngIf="toggle">
+                <tbody>
                     <!-- use combo structural directive to display the contents of the table based on data being called in -->
                     <th>
                         <div class="row">
-                            <div class="col"><i class="fas fa-star"></i>[[12th St. Oakland City Center]]</div>
+                            <div class="col"><i class="fas fa-star"></i>{{testDepart}}</div>
                             <div class="col rightAlign">{{departTime}}</div>
                         </div>
                     </th>
