Add a click function

--- a/src/app/pages/departures/departures.component.html
+++ b/src/app/pages/departures/departures.component.html
@@ -24,7 +24,7 @@
                     <th>
                         <div class="row">
                             <!--DELETE BEFORE MERGE: Star is here-->
-                            <div class="col"><i class="fas fa-star"></i>[[12th St. Oakland City Center]]</div>
+                            <div class="col"><i (click)="getStationName" class="fas fa-star"></i>[[12th St. Oakland City Center]]</div>
                             <div class="col rightAlign">[[1:19am]]</div>
                         </div>
                     </th>
