Adding color to hovered star

--- a/src/app/pages/departures/departures.component.css
+++ b/src/app/pages/departures/departures.component.css
@@ -82,3 +82,9 @@ background-color: #E9E9E9;
 }
 
 /********** COLUMN NAV*********/
+
+/********** Star color*********/
+.yellow{
+    color: yellow;
+}
+/********** Star color*********/
